<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.firman.dicodingevent.ui.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_navigation_home_to_navigation_finished"
            app:destination="@id/navigation_finished"
            app:launchSingleTop="true"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_upcoming"
            app:destination="@id/navigation_upcoming"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_setting"
            app:destination="@id/navigation_setting" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_favorite"
            app:destination="@id/navigation_favorite" />
    </fragment>

    <fragment
        android:id="@+id/navigation_upcoming"
        android:name="com.firman.dicodingevent.ui.ui.upcoming.UpcomingEventFragment"
        android:label="@string/title_upcoming"
        tools:layout="@layout/fragment_upcoming_event" >
        <action
            android:id="@+id/action_navigation_upcoming_to_navigation_home"
            app:destination="@id/navigation_home"
            app:launchSingleTop="true"
            app:popUpTo="@id/navigation_home"
            app:popUpToInclusive="true"  />
        <action
            android:id="@+id/action_navigation_upcoming_to_navigation_finished2"
            app:destination="@id/navigation_finished"
            app:launchSingleTop="true"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_navigation_upcoming_to_navigation_setting"
            app:destination="@id/navigation_setting" />
        <action
            android:id="@+id/action_navigation_upcoming_to_navigation_favorite"
            app:destination="@id/navigation_favorite" />
    </fragment>

    <fragment
        android:id="@+id/navigation_finished"
        android:name="com.firman.dicodingevent.ui.ui.finished.FinishedEventFragment"
        android:label="@string/finished_event"
        tools:layout="@layout/fragment_finished_event" >
        <action
            android:id="@+id/action_navigation_finished_to_navigation_home"
            app:destination="@id/navigation_home"
            app:launchSingleTop="true"
            app:popUpTo="@id/navigation_home"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_navigation_finished_to_navigation_upcoming"
            app:destination="@id/navigation_upcoming"
            app:launchSingleTop="true"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_navigation_finished_to_navigation_setting"
            app:destination="@id/navigation_setting" />
        <action
            android:id="@+id/action_navigation_finished_to_navigation_favorite"
            app:destination="@id/navigation_favorite" />
    </fragment>
    <fragment
        android:id="@+id/navigation_setting"
        android:name="com.firman.dicodingevent.ui.ui.setting.SettingFragment"
        android:label="@string/setting"
        tools:layout="@layout/fragment_setting">
        <action
            android:id="@+id/action_navigation_setting_to_navigation_home"
            app:destination="@id/navigation_home" />
        <action
            android:id="@+id/action_navigation_setting_to_navigation_finished"
            app:destination="@id/navigation_finished" />
        <action
            android:id="@+id/action_navigation_setting_to_navigation_upcoming"
            app:destination="@id/navigation_upcoming" />
        <action
            android:id="@+id/action_navigation_setting_to_navigation_favorite"
            app:destination="@id/navigation_favorite" />
    </fragment>
    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.firman.dicodingevent.ui.ui.favorite.FavoriteFragment"
        android:label="@string/favorite"
        tools:layout="@layout/fragment_favorite"/>
</navigation>
